Fix image style align to center

--- a/source/css/default.styl
+++ b/source/css/default.styl
@@ -14,6 +14,8 @@ a.gallery-item
     img
         box-shadow: 2px 2px 2px #ccc;
         border: 1px solid #ccc;
+        display: block;
+        margin: auto;
 
 .menu
     font-size: 0.9rem;
